<resources>
    <string name="app_name">EasyWine</string>
    <string name="login_btn_google">구글 로그인</string>
    <string name="create_nickname_title">닉네임이 필요해요!</string>
    <string name="create_nickname_title2">로 시작하기</string>
    <string name="bottom_navi_ready">와인준비</string>
    <string name="bottom_navi_note">와인노트</string>
    <string name="bottom_navi_search">와인분류</string>
    <string name="bottom_navi_info">와인정보</string>
    <string name="menu_note_info_item_1">수정하기</string>
    <string name="menu_note_info_item_2">삭제하기</string>
    <string name="menu_note_item_1">저장</string>
    <string name="main_toolbar_title">My Wine Cellar</string>
    <string name="note_float_btn_title">노트 작성</string>
    <string name="edit_note_toolbar_title">와인 기록 쓰기</string>
    <string name="edit_note_add_photo">사진을 추가해주세요</string>
    <string name="edit_note_name">와인명:</string>
    <string name="edit_note_type">종류:</string>
    <string name="edit_note_type_hint">ex)레드와인</string>
    <string name="edit_note_country">국가:</string>
    <string name="edit_note_area">지역:</string>
    <string name="edit_note_variety">품종:</string>
    <string name="edit_note_variety_hint">ex)까르베네 쇼비뇽</string>
    <string name="edit_note_vintage">빈티지:</string>
    <string name="edit_note_alcohol">알코올:</string>
    <string name="edit_note_alcohol_unit">% vol</string>
    <string name="edit_note_buy_date">구입시기:</string>
    <string name="edit_note_drink_date">시음일자:</string>
    <string name="edit_note_price">구입가격:</string>
    <string name="edit_note_price_unit">원</string>
    <string name="edit_note_etc">참고사항</string>
    <string name="edit_note_sweetness">당도</string>
    <string name="edit_note_sweetness_seekbar_1">Dry</string>
    <string name="edit_note_sweetness_seekbar_2">O-dry</string>
    <string name="edit_note_sweetness_seekbar_3">M-dry</string>
    <string name="edit_note_sweetness_seekbar_4">M-sweet</string>
    <string name="edit_note_sweetness_seekbar_5">Sweet</string>
    <string name="edit_note_acidity">산도</string>
    <string name="edit_note_acidity_seekbar_1">낮은</string>
    <string name="edit_note_acidity_seekbar_2">부드러운</string>
    <string name="edit_note_acidity_seekbar_3">적당한</string>
    <string name="edit_note_acidity_seekbar_4">높은</string>
    <string name="edit_note_acidity_seekbar_5">강한</string>
    <string name="edit_note_tannin">타닌</string>
    <string name="edit_note_tannin_seekbar_1">약한</string>
    <string name="edit_note_tannin_seekbar_2">부드러운</string>
    <string name="edit_note_tannin_seekbar_3">적당한</string>
    <string name="edit_note_tannin_seekbar_4">견고한</string>
    <string name="edit_note_tannin_seekbar_5">강한</string>
    <string name="edit_note_body">바디</string>
    <string name="edit_note_body_seekbar_1">Light</string>
    <string name="edit_note_body_seekbar_2">M-Light</string>
    <string name="edit_note_body_seekbar_3">Medium</string>
    <string name="content_item_wo_opener_title1">How to Open Wine</string>
    <string name="content_item_wo_opener_title2">Wine Opener</string>
    <string name="content_item_wo_opener_content1">
        위의 사진과 같이 와인 오프너의 종류는 매우 다양합니다.\n
        T자형 오프너, 윙 오프너, 소믈리에 나이프 등등 우리가 자주 보던 와인 오프너도 있고 처음 보는 오프너 들도 많이 있습니다.\n
        그중에 가장 많이 사용하고 구하기 쉬운 소믈리에 나이프를 사용해서 와인 오픈을 해보겠습니다.\n
    </string>
    <string name="content_item_wo_wineOpen_title1">1. 와인 입구 호일 커팅</string>
    <string name="content_item_wo_wineOpen_title2">2. 코르크 따기</string>
    <string name="content_item_wo_wineOpen_content1">
        소믈리에 나이프에 달려 있는 칼과 비슷하게 생긴 호일커터를 사용하여 와인 뚜껑을 감싸고 있는 호일을 분리해줍니다.\n
    </string>
    <string name="content_item_wo_wineOpen_content2">
        와인 오프너 스크류의 끝을 코르크 중앙에 꽂아줍니다.\n
        이때 코르크와 스크류는 수직이 되도록 해야합니다\n
        스크류가 코르크 안으로 잘 들어갈 수 있도록 적당한 힘으로 시계방향으로 돌려 스크류의 나사가 반 정도 남겨지면 멈춥니다.\n
    </string>
    <string name="content_item_wo_wineOpen_content3">
        지랫대 역할을 하는 오프너의 후크를 병 입구쪽에 걸쳐줍니다.\n
        한 손으로는 병 목을 잡아주고 다른 한손은 오프너를 잡고 천천히 들어 올려줍니다.\n
    </string>
    <string name="content_item_wo_wineOpen_content4">
        어느정도 올라왔다면 두번째 후크를 병 입구쪽에 걸쳐준 뒤 천천히 들어 올려줍니다\n
        이때 주의할 점은 후크 1단 부분과 2단 부분이 관절처럼 꺽어지기 때문에 곧게 편 상태를 유지해야 합니다.\n
        코르크가 거의 다 올라오면 멈춘 뒤 코르크 하단을 잡아 좌우로 돌려주면서 뽑아줍니다.\n
        마지막으로 냅킨을 이용해서 병 입구를 닦아주면 와인 오픈 끝!!\n
    </string>
    <string name="content_item_champagneOpen_title1">How to Open Champagne</string>
    <string name="content_item_champagneOpen_title2">1. 은박지, 철사 제거</string>
    <string name="content_item_champagneOpen_title3">2. 코르크 빼기</string>
    <string name="content_item_champagneOpen_content1">
        우선 코르크 마개를 감싸고 있는 은박지를 벗겨줍니다.\n
        그 다음 코르크 마개가 갑자기 튀어나가지 않도록 엄지손가락으로 눌러주면서 코르크 마개를 고정하고 있는 철사를 천천히 풀어줍니다.\n
        주의 할 점은 코르크 마개를 빼기 직전까지 철사를 제거하지 않습니다.\n
        그렇지 않으면 준비가 되기 전에 코로크 마개가 빠져버리기 때문입니다.\n
    </string>
    <string name="content_item_champagneOpen_content2">
        주로 사용하는 손으로 병을 잡고 45도로 기운다.\n
        다른 손으로 코르크 마개를 잡아주고 병을 잡은 손으로 병을 돌려줍니다.\n
        그렇게 되면 코르크 마개가 점점 나오게 되는데 이때 코르크 마개가 한번에 튀어나오지 않도록 힘을 유지해야 합니다.\n
        코르크가 80%정도 올라왔다고 생각이 든다면 코르크를 살짝 꺾어줍니다.\n
        기포빠지는 소리나 나게되는데 이 소리가 멈춘 뒤 코르크를 빼면 성공입니다!\n
    </string>
    <string name="content_item_no_opener_title1">How to open wine without an opener?</string>
    <string name="content_item_no_opener_title2">1. 코르크 병 밀어 넣기</string>
    <string name="content_item_no_opener_title3">2. 구두 사용하기</string>
    <string name="content_item_no_opener_title4">3. 나사 사용하기</string>
    <string name="content_item_no_opener_title5">4. 옷걸이 사용하기</string>
    <string name="content_item_no_opener_title6">5. 못과 망치 사용하기</string>
    <string name="content_item_no_opener_title7">6. 가위 사용하기</string>
    <string name="content_item_no_opener_content1">
        우리가 여행가거나 또는 집에서 와인을 마시려고 할 때 와인 오프너가 없어서 당황했던적이 한번씩 있었을 것입니다.\n
        또한 와인을 오픈하다가 코르크가 부러져 어떻게 해야할지 몰랐던 적도 있었을 것입니다.
        스크류 캡으로 된 와인들은 그냥 돌려서 마시면 되지만 이러한 코르크는 따기 위해서 오프너가 반듯이 필요합니다.\n
        하지만 오프너 없이도 코르크를 딸 수 있는 방법이 있습니다!\n
        당황하지 마시고 따라해보세요!\n
    </string>
    <string name="content_item_no_opener_content2">
        가장 간단하면서 확실한 방법입니다.\n
        끝이 무딘 길쭉한 물건을 찾아서 코르크 마개를 병 속으로 밀어넣는 방법입니다.\n
        한 번에 강한 힘으로 밀어 넣는 것이 아니라 천천히 밀어 넣는다는 느낌으로 힘을 주어야 합니다.\n
        이 방법은 단점이 있는데 와인을 다시 보관할 수 없기 때문에 한번에 다 마셔야 한다는 점과
        코르크 마개 조각이 와인에 떠다닐 수 있다는 단점이 있습니다.\n
    </string>
    <string name="content_item_no_opener_content3">
        이 방법은 조금 힘이 들 수 있지만 코르크 마개에 손상을 주지 않고 안전하게 뽑을 수 있습니다.\n
        우선 밑창이 너무 얇지 않고 너무 푹신하지 않은 신발을 준비해야 합니다.\n
        남자 단화나 구두가 괜찮다고 생각합니다!\n
        그 다음 와인 병 바닥 부분을 신발에 꽂아줍니다.\n
        이때 신발이 커서 와인 병이 많이 움직인다면 신문지 같은 것으로 채워주세요.\n
        마지막으로 신발과 와인병을 붙잡고 단단한 벽에 와인이 수평이 되도록 내려치면 됩니다.\n
        여기서 너무 세게 치게되면 병이 부서질 수 있으니 적당한 힘으로 내려쳐야 합니다.\n
        이 작업을 반복하게 되면 코르크 마개가 점점 올라오는데 80%정도 올라왔다면 손으로 잡아서 뽑아주면 끝입니다.\n
    </string>
    <string name="content_item_no_opener_content4">
        이 방법을 하기 위해서는 나사, 드라이버, 펜치가 필요합니다.\n
        코르크 정중앙에 나사를 드라이버로 80%정도 박습니다.\n
        그 다음 병을 단단히 잡은 뒤 펜치로 나사를 잡고 좌우로 흔들면서 빼줍니다.\n
        이 방법의 단점은 힘이 많이 들어간다는 것과 잘못하면 코르크가 망가질 수 있습니다.\n
    </string>
    <string name="content_item_no_opener_content5">
        이 방법은 옷걸이를 갈고리 모양으로 만들어 코르크 마개를 끌어 올리는 방법입니다.\n
        우선 옷걸이의 끝 부분을 갈고리 모양으로 구부려준 뒤 이 부분을 코크르 마개 가장자리로 집어넣습니다.\n
        갈고리 부분이 오나전히 들어가면 갈고리 끝 부분을 코르크 마개 가운데로 오게 회전시켜서 갈고리에
        코르크 마개가 완전히 걸리면 천천히 힘을 주어 끌어 올립니다.\n
        이 방법을 사용할때는 옷걸이를 병 안에 넣어야 하는 방법이기 때문에 반드시 깨끗한 옷걸이를 사용하거나 씻어서 사용하는 것을 권장합니다!\n
    </string>
    <string name="content_item_no_opener_content6">
        못을 코르크 마개의 중심 부분에 조심스럽게 박아 넣습니다.\n
        못 개수는 2~3개가 좋으며 박아넣는 깊이는 최대한 깊을수록 좋습니다.\n
        그다음으로 망치 반대쪽 부분으로 못을 뽑아 올리면 됩니다.\n
        지렛대 원리를 사용하기 때문에 상대적으로 와인병 따는데 수월하지만 못이 빠져버리는 경우 다른곳이 다시 박아 넣어야 합니다.\n
    </string>
    <string name="content_item_no_opener_content7">
        큰 가위가 아닌 조그만 가위를 2개 준비해야 합니다.\n
        가위 2개 모두 펼친 후 한쪽 부분을 코르크 마개 중심에 박아 넣습니다.\n
        그런다음 가위를 잡고 회전시키며 코르크 마개를 천천히 뽑아내면 됩니다.\n
        이때 중요한 것은 가위 날이 충분히 들어갔는지가 중요하며, 가위 날에 손을 다칠 수 있으므로 조심해야 합니다.\n
    </string>
    <string name="content_item_wine_drink_title1">How To Enjoy Wine?</string>
    <string name="content_item_wine_drink_title2">1. 눈으로 즐기기</string>
    <string name="content_item_wine_drink_title3">2. 향으로 즐기기</string>
    <string name="content_item_wine_drink_title4">3. 맛으로 즐기기</string>
    <string name="content_item_wine_drink_content1">
        와인은 색과 투명도, 맑은 정도에 따라 특성이 구분됩니다.\n
        레드와인의 경우 보라색, 벽돌색, 진한 자주색, 바랜색 정도로 구분할 수 있는데 마시기 전에 먼저 색을 즐겨봅시다!\n
    </string>
    <string name="content_item_wine_drink_content2">
        와인은 향으로 마시는 술입니다.\n
        와인을 잔 안에서 2~3바퀴 돌려 향이 잘 발산되도록(스월링) 한 뒤 코를 가져다 대고 향을 맡습니다.\n
        과일향, 꽃향, 나무향 등 다양한 향이 발산되는 것을 느껴봅시다!\n
    </string>
    <string name="content_item_wine_drink_content3">
        한번에 많은 양을 마시지 않고 입안에 머금을 수 있는 정도만 마십니다.\n
        입안에 잠깐 머물게 해서 코로 올라오는 향을 맡으면 이전에 코로 맡은 향과는 또 다른 향을 느낄 수 있습니다.\n
        목구멍으로 와인이 넘어가고 나면 은은하고 잔잔한 잔향이 입안에 남는데, 잔향이 오래 남는 와인이
        있는가 하면 짧게 사라지는 것도 있습니다.\n
        그 차이를 구분하는 것도 하나의 재미를 느낄 수 있습니다.\n
    </string>
    <string name="content_item_wine_order_title1">Wine Drinking Order</string>
    <string name="content_item_wine_order_title2">1. Good Order</string>
    <string name="content_item_wine_order_title3">2. Bad Order</string>
    <string name="content_item_wine_order_content1">
        와인을 마시는 순서는 중요합니다.\n
        뒤에 마시는 와인이 바로 앞에 마신 와인의 풍미를 망쳐서는 안 되기 때문입니다.\n
        와인의 특성을 고려해 미각의 즐거움을 놓치는 실수를 하지 않도록 조심해야 합니다.\n
    </string>
    <string name="content_item_wine_order_content2">
        새콤하고 가벼운 와인에서 시작해 점차 풀바디한 강한 와인을 마시는 것이 일반적인 순서입니다.\n
        1. 드라이 스파클링 와인\n
        2. 드라이 화이트 와인\n
        3. 풀바디 화이트 와인, 라이트바디 레드 와인\n
        4. 풀바디 레드 와인\n
        5. 스위트 와인\n
    </string>
    <string name="content_item_wine_order_content3">
        와인을 마시는 순서가 잘못된 예\n
        ● 매우 스위트한 와인 다음에 매우 드라이한 와인을 내놓는 경우\n
        ● 너무 따듯하거나 무거운 와인으로 파티를 시작하는 경우\n
        ● 섬세한 와인 또는 라이트바디 와인 다음에 강한 와인을 내놓는 경우\n
    </string>
    <string name="content_item_wine_keep_title1">How to Store Wine at Home?</string>
    <string name="content_item_wine_keep_title2">1. 햇빛 피하기</string>
    <string name="content_item_wine_keep_title3">2. 공기 피하기</string>
    <string name="content_item_wine_keep_title4">3. 온도 유지하기</string>
    <string name="content_item_wine_keep_title5">4. 병을 세워서? 눕혀서?</string>
    <string name="content_item_wine_keep_title6">5. 와인 적정온도?</string>
    <string name="content_item_wine_keep_content1">
        식사 또는 파티가 끝나고 아직 와인이 병에 남아 있다면?\n
        비우기 위해 억지로 마시거나 남은 와인들을 버릴 필요는 없습니다.\n
        와인은 그 어떤 술 보다도 보관이 가장 중요한 술입니다.\n
        산화와 변질이 쉬운 솔이기도 하고, 보관하는 환경에 따라 맛이 달라지는 술입니다.\n
        와인을 개봉했을때 와인을 현명하게 보관해야 다음번에 마실 때도 부담없어 더 좋은 향을 유지할 수 있습니다.\n
    </string>
    <string name="content_item_wine_keep_content2">
        창가나 직사광선이 닿지 않는 곳에 와인을 보관해야 합니다.\n
        햇빛을 받으면 와인이 빠르게 숙성되기 때문입니다.\n
        또한 와인은 눕혀서 보관하며 최대한 흔들리지 않게 보관해야 합니다.\n
        야외에서 마실때는 차 트렁크보다 직접 들고 타는 것이 좋습니다.\n
    </string>
    <string name="content_item_wine_keep_content3">
        와인은 포도를 발효시켜 만든 술이기 때문에 공기와 닿으면 산화가 일어날 확률이 높습니다.\n
        그렇기 때문에 공기와의 접촉을 최소화시켜 주는 것이 좋습니다.\n
        남은 와인을 보관할 수 있는 와인 스토퍼나 와인 세이버를 따로 구매하여 보관하는 것이 가장 좋은 방법입니다.\n
        이를 통해 공기가 들어가지 않도록 밀봉해주는 것이 좋습니다.\n
    </string>
    <string name="content_item_wine_keep_content4">
        와인은 온도변화에 예민합니다.\n
        온도가 지나치게 놓은 곳이나 낮은 곳에 보관하게 되면 맛이 변할 수 있어 13℃ 내외로 보관하는 것이 가장 좋습니다.\n
        무거운 레드와인은 약간 높은 온도에서, 화이트와인은 낮은 온도에서 보관하는 것이 좋습니다.\n
    </string>
    <string name="content_item_wine_keep_content5">
        아직 개봉하지 않은 와인의 경우에는 눕혀서 보관하는 것이 좋습니다.\n
        세워서 보관할 경우 코르크가 막히게 되어 공기가 들어가 산화가 진행될 가능성이 높습니다.\n
        반대로 개봉 후 마신 와인은 세워서 보관해야 공기와의 접촉을 최소화 시킬 수 있습니다.\n
    </string>
    <string name="content_item_wine_keep_content6">
        와인은 종류에 따라 가장 맛있게 마실 수 있는 온도가 있습니다.\n
        대중적인 레드와인은 15~20℃가 적정온도이며 화이트와인은 이보다 낮은 10~15℃가 적정온도 입니다.\n
        전체적으로 10~17℃ 정도의 온도에서 보관하면 좋습니다.\n
        보통 냉장고에 와인을 보관하는데 냉장고의 온도는 약 4℃로 냉장 보관은 좋지 않은 보관방법 입니다.\n
    </string>
</resources>