<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/content_item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/content_item_wine_keep_title1" />

        <TextView
            style="@style/content_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_item_wine_keep_content1" />

        <TextView
            style="@style/content_item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/content_item_wine_keep_title2" />

        <TextView
            style="@style/content_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_item_wine_keep_content2" />

        <TextView
            style="@style/content_item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/content_item_wine_keep_title3" />

        <TextView
            style="@style/content_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_item_wine_keep_content3" />

        <TextView
            style="@style/content_item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/content_item_wine_keep_title4" />

        <TextView
            style="@style/content_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_item_wine_keep_content4" />

        <TextView
            style="@style/content_item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/content_item_wine_keep_title5" />

        <TextView
            style="@style/content_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_item_wine_keep_content5" />

        <TextView
            style="@style/content_item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/content_item_wine_keep_title6" />

        <TextView
            style="@style/content_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_item_wine_keep_content6" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>