<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_item_wo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_title1"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_content1"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_title2"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_content2"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_title3"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_content3"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_title4"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_content4"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_title5"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_content5"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_title6"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_content6"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_title7"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_no_opener_content7"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>