<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_item_wo_title"
            style="@style/content_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_item_champagneOpen_title1" />

        <TextView
            style="@style/content_item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/content_item_champagneOpen_title2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/champagne_open1_remove" />

        <TextView
            style="@style/content_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_item_champagneOpen_content1" />

        <TextView
            style="@style/content_item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/content_item_champagneOpen_title3" />

        <TextView
            style="@style/content_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_item_champagneOpen_content2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>