<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wine_drink_title1"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wine_drink_title2"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wine_drink_content1"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wine_drink_title3"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wine_drink_content2"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wine_drink_title4"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wine_drink_content3"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>