<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wo_wineOpen_title1"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wine_open1_remove"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wo_wineOpen_content1"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wo_wineOpen_title2"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wine_open2_remove"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wo_wineOpen_content2"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wine_open3_remove"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wo_wineOpen_content3"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wine_open4_remove"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nanumhand"
            android:text="@string/content_item_wo_wineOpen_content4"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>